typescript/checker/tests/conformance/classes/classDeclarations/classHeritageSpecification/classAppearsToHaveMembersOfObject.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            33,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classAppearsToHaveMembersOfObject.ts:3:5
  |
3 | var c: C;
  |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            48,
        ),
        hi: BytePos(
            57,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classAppearsToHaveMembersOfObject.ts:4:10
  |
4 | var r = c.toString();
  |          ^^^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            87,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classAppearsToHaveMembersOfObject.ts:5:11
  |
5 | var r2 = c.hasOwnProperty('');
  |           ^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(C)
File: $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classAppearsToHaveMembersOfObject.ts
 --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classAppearsToHaveMembersOfObject.ts:6:17
  |
6 | var o: Object = c;
  |                 ^

error: unimplemented
expand_export_info(C)
File: $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classAppearsToHaveMembersOfObject.ts
 --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classAppearsToHaveMembersOfObject.ts:7:14
  |
7 | var o2: {} = c;
  |              ^

